--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,27 +1,14 @@
 .container {
-  max-width: 352px;
-  padding-left: 16px;
-  padding-right: 16px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 }
 .container > * {
   max-width: 100%;
   box-sizing: border-box;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
 }
